fixed word wrapping on posts and comments

--- a/react-app/src/components/CommentList/commentList.css
+++ b/react-app/src/components/CommentList/commentList.css
@@ -28,7 +28,7 @@
 
 .comment__content {
    grid-area: content;
-   overflow-wrap: normal;
+   overflow-wrap: anywhere;
 }
 
 .comment__btns {
